# turnir_

./: .replit  pyproject.toml
turnir_project/: fighters.csv  fights.db
turnir_project/migrations/versions/: 976ea42f93c1_fightsdb_table_created.py  ce8f37762269_init.py  f0deb4081677_fightsdb_table_created.py
turnir_project/models/: models.py
turnir_project/routes/: routes.py
turnir_project/templates/: base.html  competition.html
