[tool.poetry]
name = "repl_python3_turnir-1"
version = "0.1.0"
description = ""
authors = ["Zhenya1975 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
